--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fluxtracker</title>
-    <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-MP67MT4');</script>
-    <!-- End Google Tag Manager -->
+    <script async defer data-website-id="59436ff5-3147-4eed-8b2f-7017c9b2cd21" src="https://umami.fluxtracker.fr/umami.js"></script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MP67MT4"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
