[temp] remove analytics

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fluxtracker</title>
-    <script async defer data-website-id="59436ff5-3147-4eed-8b2f-7017c9b2cd21" src="https://umami.fluxtracker.fr/umami.js"></script>
+    <!-- <script async defer data-website-id="59436ff5-3147-4eed-8b2f-7017c9b2cd21" src="https://umami.fluxtracker.fr/umami.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
