--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fluxtracker</title>
-    <script async defer data-website-id="bc7a6a09-ab8e-42a0-8ab6-fb0f611c03bb" src="https://umami.fluxtracker.fr/umami.js"></script>
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
