update gateway from Elrond to MultiversX

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#18191a" />
     <meta
       name="description"
-      content="Compound interest optimizer for the Elrond blockchain ecosystem."
+      content="Compound interest optimizer for the MultiversX blockchain ecosystem."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
